# reachy_dance_duo

./: .gitignore  README.md  index.html  pyproject.toml  style.css
js/: MJCFLoader.js  ReachyRobot.js  mjcf_loader.js  reachy_robot.js  visualizer.js
reachy_dance_duo/: __main__.py  app.py  main.py  mode_settings.json
reachy_dance_duo/archive/: requirements.txt
reachy_dance_duo/behaviors/: connected_choreographer.py
reachy_dance_duo/core/: motion_controller.py  speech_analyzer.py
reachy_dance_duo/static/: reachy_mini.xml
test2/: app.py  main.py  main_empty.py  mode_settings.py
test2/archive/: setup.py
test2/behaviors/: __init__.py  connected_choreographer.py  live_groove.py  synthwave_serenade.py
test2/core/: audio_stream.py  motion_controller.py  speech_analyzer.py  speech_tapper.py
test2/static/: index.html
